syntax = "proto3";
package edison.proto;
option go_package = ".;edison_proto";

message msg {
    musicStatus music   =   1;
    carStatus   car     =   2;
}

// musicStatus is a message with the current status of the music being played
//Not including isShuffled or artURL because mpris-proxy does not support it as of now
message musicStatus {
    string PlayerName = 1;
    string PlaybackStatus = 2;
    // in milliseconds
    int32 Length = 3;
    string Title = 4;
    string Artist = 5;
    string Album = 6;
    string AlbumArtist = 7;
    // in milliseconds from start
    int32 Position = 8;
}

//carStatus is a message with data from the obd2 sensor.
// Units in metric where applicable or a percentage from 0 to 1
message carStatus {
    float fuelLevel = 1;
    int32 coolantTemp = 2;
    float engineLoad = 3;
    float engineRPM = 4;
    uint32 fuelPressure = 5;
    uint32 vehicleSpeed = 6;
    int32 intakeAirTemp = 7;
}